--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div v-show="state==0">
             <button @click="Start">開始遊戲</button>
-            <button @click="Load" v-if="PlayExperience>0">讀取(紀錄僅保存30日)</button>
+            <button @click="Load" v-if="PlayExperienceC()">讀取(紀錄僅保存30日)</button>
         </div>
     </div>
 
@@ -38,9 +38,7 @@
             if (arr != null) return unescape(arr[2]);
             return null;
         }
-        $(function () {
-            vm.PlayExperience=getCookie("PlayExperience")
-        })
+        
         let vm = new Vue({
             el: app,
             data: {
@@ -64,7 +62,7 @@
                     SetCookie("ASPlus", this.ASPlus)
                     SetCookie("Level", this.Level)
                     SetCookie("Quantity", this.Quantity)
-                    SetCookie("PlayExperience", this.PlayExperience)
+                    SetCookie("PlayExperience", 1)
                 },
                 Load() {
                     this.Money = getCookie("Money")
@@ -127,10 +125,23 @@
                         alert("你的金錢不足")
                     }
                 },
+                PlayExperienceC(){
+                    if(getCookie("PlayExperience")!=null)
+                    {
+                        console.log("有")
+                        return true
+                    }
+                    console.log("無")
+                    return false
+                }
                 
 
             },
         })
+        // (function () {
+        //     console.log(1)
+        //     vm.PlayExperience=getCookie("PlayExperience")
+        // }())
     </script>
 </body>
 
