--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.9/vue.js'></script>
     <script>
         function SetCookie(name, value) {
-            console.log(name + value)
+            // console.log(name + value)
             let Days = 30; //此 cookie 將被儲存 30 天
             let exp = new Date(); //new Date("December 31, 9998");
             exp.setTime(exp.getTime() + Days * 24 * 60 * 60 * 1000);
             document.cookie = name + "=" + escape(value) + ";expires=true," + exp.toGMTString();
-            console.log(name + "=" + escape(value) + ";expires=true," + exp.toGMTString())
+            // console.log(name + "=" + escape(value) + ";expires=true," + exp.toGMTString())
         }
 
         function getCookie(name) {
@@ -128,10 +128,10 @@
                 PlayExperienceC(){
                     if(getCookie("PlayExperience")!=null)
                     {
-                        console.log("有")
+                        // console.log("有")
                         return true
                     }
-                    console.log("無")
+                    // console.log("無")
                     return false
                 }
                 
