--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <button @click="UpASPlus" v-if="ASPlus<9">訓練上彈速度(目前價格:{{(((ASPlus*ASPlus)+1)/2)*1000}})</button>
             <p v-else>訓練上彈速度(已達上限)</p>
             <br>
+            當前傷害:{{(((Atk + AtkPlus*0.75) * (1+AtkTechnology)) *Quantity)/(AtkSpeed-ASPlus)}}/s
+            <br>
             怪物剩餘血量:{{MonsterLife}}
         </div>
         <div v-show="state==0">
