--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 ASPlus: 0,
                 Level: 1,
                 Quantity: 1,
-                MonsterLife: 100,
+                MonsterLife: 10,
                 PlayExperience:0,
                 TimeName:0,
             },
@@ -93,7 +93,12 @@
                     this.TimeName=a
                 },
                 EveryRound() {
-                    this.MonsterLife = 100 * this.Level
+                    let life=0
+                    if (this.Level>10){
+                        life+=100 * this.Level
+                    }
+                    life+=10 * this.Level
+                    this.MonsterLife = life
 
                 },
                 RoundDo() {
