--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 EveryRound() {
                     let life=0
                     if (this.Level>10){
-                        life+=100 * this.Level
+                        life+=100 * this.Level/10
                     }
                     life+=10 * this.Level
                     this.MonsterLife = life
