--- a/index.html
+++ b/index.html
@@ -6,29 +6,47 @@
     <title>Infinite Arrow Tower</title>
 </header>
 
-<body>    
-    <div id="app">
-        網頁文字遊戲-無限箭塔-ver:{{ver}}
-        <div id="StatusBar" v-show="state>0">
-            金錢:{{Money}} 目前關卡:{{Level}}<button @click="Save">存檔</button><br>
-            <button @click="UpAtkPlus">升級箭(目前價格:{{(AtkPlus+1)*10}})</button><br>
-            <button @click="UpAtkTechnology">升級弓(目前價格:{{(AtkTechnology+1)*100}})</button><br>
-            <button @click="UpQuantity">建造箭塔(目前價格:{{Quantity*1000}})</button><br>
-            目前上彈速度:{{AtkSpeed-ASPlus}}s/發
-            <button @click="UpASPlus" v-if="ASPlus<9">訓練上彈速度(目前價格:{{ASPlus*ASPlus*ASPlus*ASPlus*ASPlus+(((ASPlus*ASPlus)+1)/2)*998+1}})</button>
-            <p v-else>訓練上彈速度(已達上限)</p>
-            <br>
-            當前傷害:{{(((Atk + AtkPlus*0.75) * (1+AtkTechnology)) *Quantity)/(AtkSpeed-ASPlus)}}/s
-            <br>
-            怪物剩餘血量:{{MonsterLife}}
-        </div>
-        <div v-show="state==0">
-            <button @click="Start">開始遊戲</button>
-            <button @click="Load" v-if="PlayExperienceC()">讀取(紀錄僅保存30日)</button>
+<body>
+    <div class='container'>
+        <div class="row justify-content-center align-items-center">
+            <div class="col"></div>
+            <div class="col">
+                <div id="app">
+                    <h1>無限箭塔-ver:{{ver}}</h1> 
+                    <h2>網頁文字遊戲</h2> 
+                    <h3>-----------------------------</h3> 
+                    <div id="StatusBar" v-show="state>0">
+                        金錢:{{Money}} 目前關卡:{{Level}}<button @click="Save">存檔</button><br>
+                        <button @click="UpAtkPlus">升級箭(目前價格:{{(AtkPlus+1)*10}})</button><br>
+                        <button @click="UpAtkTechnology">升級弓(目前價格:{{(AtkTechnology+1)*100}})</button><br>
+                        目前箭塔擁有數:{{Quantity}}座<button @click="UpQuantity">建造箭塔(目前價格:{{Quantity*1000}})</button><br>
+                        目前上彈速度:{{AtkSpeed-ASPlus}}s/發
+                        <button @click="UpASPlus"
+                            v-if="ASPlus<9">訓練上彈速度(目前價格:{{ASPlus*ASPlus*ASPlus*ASPlus*ASPlus+(((ASPlus*ASPlus)+1)/2)*998+1}})</button>
+                        <p v-else>訓練上彈速度(已達上限)</p>
+                        <br>
+                        當前傷害:{{(((Atk + AtkPlus*0.75) * (1+AtkTechnology)) *Quantity)/(AtkSpeed-ASPlus)}}/s
+                        <br>
+                        怪物剩餘血量:{{MonsterLife}}
+                    </div>
+                    <div v-show="state==0">
+                        <button @click="Start">開始遊戲</button>
+                        <button @click="Load" v-if="PlayExperienceC()">讀取(紀錄僅保存30日)</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col"></div>
         </div>
     </div>
-
     <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.9/vue.js'></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous">
+    </script>
     <script>
         function SetCookie(name, value) {
             // console.log(name + value)
@@ -44,7 +62,7 @@
             if (arr != null) return unescape(arr[2]);
             return null;
         }
-        
+
         let vm = new Vue({
             el: app,
             data: {
@@ -58,9 +76,9 @@
                 Level: 1,
                 Quantity: 1,
                 MonsterLife: 10,
-                PlayExperience:0,
-                TimeName:0,
-                ver:"1.1",
+                PlayExperience: 0,
+                TimeName: 0,
+                ver: "1.2",
             },
             methods: {
                 Save() {
@@ -86,30 +104,31 @@
                     this.EveryRound()
                     this.TimeSet()
                 },
-                TimeSet(){
+                TimeSet() {
                     window.clearInterval(this.TimeName)
-                    let a=window.setInterval(() => {
+                    let a = window.setInterval(() => {
                         setTimeout(() => {
                             this.RoundDo()
                         }, 0)
-                    }, 1000*(this.AtkSpeed-this.ASPlus))
-                    this.TimeName=a
+                    }, 1000 * (this.AtkSpeed - this.ASPlus))
+                    this.TimeName = a
                 },
                 EveryRound() {
-                    let life=0
-                    let Level=this.Level
-                    if (Level>100){
-                        life+=3000 * (Level-Level%100)/100
+                    let life = 0
+                    let Level = this.Level
+                    if (Level > 100) {
+                        life += 3000 * (Level - Level % 100) / 100
                     }
-                    if (Level>10){
-                        life+=200 * (Level-Level%10)/10
+                    if (Level > 10) {
+                        life += 200 * (Level - Level % 10) / 10
                     }
-                    life+=10 * Level
+                    life += 10 * Level
                     this.MonsterLife = life
 
                 },
                 RoundDo() {
-                    this.MonsterLife = this.MonsterLife - ((this.Atk + this.AtkPlus*0.75) * (1+this.AtkTechnology)) *
+                    this.MonsterLife = this.MonsterLife - ((this.Atk + this.AtkPlus * 0.75) * (1 + this
+                            .AtkTechnology)) *
                         this.Quantity
                     if (this.MonsterLife <= 0) {
                         this.Money += this.Level * 10
@@ -118,59 +137,51 @@
 
                     }
                 },
-                UpAtkPlus(){
-                    if(this.Money >= (this.AtkPlus+1)*10)
-                    {
-                        this.Money=this.Money-(this.AtkPlus+1)*10
-                        this.AtkPlus+=1
-                    }
-                    else{
+                UpAtkPlus() {
+                    if (this.Money >= (this.AtkPlus + 1) * 10) {
+                        this.Money = this.Money - (this.AtkPlus + 1) * 10
+                        this.AtkPlus += 1
+                    } else {
                         alert("你的金錢不足")
                     }
                 },
-                UpAtkTechnology(){
-                    if(this.Money >= (this.AtkTechnology+1)*100)
-                    {
-                        this.Money=this.Money-(this.AtkTechnology+1)*100
-                        this.AtkTechnology+=1
-                    }
-                    else{
+                UpAtkTechnology() {
+                    if (this.Money >= (this.AtkTechnology + 1) * 100) {
+                        this.Money = this.Money - (this.AtkTechnology + 1) * 100
+                        this.AtkTechnology += 1
+                    } else {
                         alert("你的金錢不足")
                     }
                 },
-                UpQuantity(){
-                    if(this.Money >= this.Quantity*1000)
-                    {
-                        this.Money=this.Money-this.Quantity*1000
-                        this.Quantity+=1
-                    }
-                    else{
+                UpQuantity() {
+                    if (this.Money >= this.Quantity * 1000) {
+                        this.Money = this.Money - this.Quantity * 1000
+                        this.Quantity += 1
+                    } else {
                         alert("你的金錢不足")
                     }
                 },
-                UpASPlus(){
-                    let ASPlus=this.ASPlus
-                    let ASPCost=ASPlus*ASPlus*ASPlus*ASPlus*ASPlus+(((ASPlus*ASPlus)+1)/2)*998+1
-                    if(this.Money >= ASPCost)
-                    {
-                        this.Money=this.Money-ASPCost
-                        this.ASPlus+=1
+                UpASPlus() {
+                    let ASPlus = this.ASPlus
+                    let ASPCost = ASPlus * ASPlus * ASPlus * ASPlus * ASPlus + (((ASPlus * ASPlus) + 1) / 2) *
+                        998 + 1
+                    if (this.Money >= ASPCost) {
+                        this.Money = this.Money - ASPCost
+                        this.ASPlus += 1
                         this.TimeSet()
-                    }
-                    else{
+                    } else {
                         alert("你的金錢不足")
                     }
                 },
-                PlayExperienceC(){
-                    if(getCookie("PlayExperience")!=null)
-                    {
+                PlayExperienceC() {
+                    if (getCookie("PlayExperience") != null) {
                         // console.log("有")
                         return true
                     }
                     // console.log("無")
                     return false
                 }
-                
+
 
             },
         })
